<resources>
    <string name="app_name">PembiayaanQu</string>
    <string name="facebook_app_id">603826616798660</string>
    <string name="fb_login_protocol_scheme">fb603826616798660</string>
    <string name="email"><font size="13">Email</font></string>
    <string name="password"><font size="13">Password</font></string>
    <string name="phone_number"><font size="13">Phone Number</font></string>
    <string name="username"><font size="13">Username</font></string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="information">Information</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="tujuan_pengajuan"><font size="13">Tujuan Pengajuan</font></string>
    <string name="nama_lengkap"><font size="13">Nama Lengkap</font></string>
    <string name="nomor_handphone"><font size="13">Nomor Handphone</font></string>
    <string name="umur"><font size="13">Umur</font></string>
    <string name="status"><font size="13">status</font></string>
    <string name="no_npwp"><font size="13">No NPWP</font></string>
    <string name="pekerjaan_usaha"><font size="13">Pekerjaan / Usaha</font></string>
    <string name="pendidikan_terakhir"><font size="13">Pendidikan Terakhir</font></string>
    <string name="jenis_kelamin"><font size="13">Jenis Kelamin</font></string>
    <string name="tipe_tujuan_pembiayaan"><font size="13">Tipe / Tujuan Pembiayaan</font></string>
    <string name="jumlah_pengajuan_pembiayaan"><font size="13">Jumlah Pengajuan Pembiayaan</font></string>
    <string name="nama_perusahaan_saat_bekerja_usaha"><font size="13">Nama Perusahaan Saat Bekerja / Usaha</font></string>
    <string name="lama_bekerja_usaha"><font size="13">Lama Bekerja / Usaha</font></string>
    <string name="no_ktp"><font size="13">No KTP</font></string>
    <string name="lokasi_pengambilan"><font size="13">Lokasi Pengambilan</font></string>
    <string name="alamat_lokasi"><font size="13">Alamat Lokasi</font></string>
    <string name="waktu_kunjungan"><font size="13">Waktu Kunjungan</font></string>
    <string name="title_activity_detail_menu">detail_menu</string>
    <string name="enter_new_password"><font size="13">Enter New-Password</font></string>
    <string name="title_activity_jemput_dokumen"><font size="13">jemput_dokumen</font></string>
    <string name="deskripsi_transaski"><font size="13">Deskripsi Transaski</font></string>
    <string name="tanggal"><font size="13">Tanggal</font></string>
    <string name="nominal_transaksi"><font size="13">Nominal Transaksi</font></string>
    <string name="status_prompt"><font size="13">Pilih Status</font></string>
    <string name="provinsi"><font size="13">Provinsi</font></string>
    <string name="kecamatan"><font size="13">Kecamatan</font></string>
    <string name="kodePos"><font size="13">Kode Pos</font></string>
    <string name="masukkan_jalan_gedung_nomor_rt_rw"><font size="13">Masukkan Jalan,Gedung,Nomor,RT/RW</font></string>


    <string-array name="Status">
        <item>Kawin</item>
        <item>Cerai</item>
        <item>Belum Kawin</item>
    </string-array>


    <string name="kategori_prompt"><font size="13">Pilih Kategori</font></string>
    <string name="plafond_prompt"><font size="13">Pilih Plafond</font></string>
    <string name="parameter_prompt"><font size="13">Pilih Parameter</font></string>
    <string name="plafond"><font size="13">Plafond</font></string>
    <string name="kategori_pengajuan">Kategori Pengajuan</string>

    <string-array name="parameter_arrays">
        <item><font size="13">Plafond</font></item>
    </string-array>

    <string-array name="kategori_arrays">
        <item><font size="13">Semua</font></item>
        <item><font size="13">Bank</font></item>
        <item><font size="13">Multifinance</font></item>
        <item><font size="13">Koperasi</font></item>
        <item><font size="13">Program CSR</font></item>
        <item><font size="13">Gadai</font></item>
    </string-array>

    <string-array name="plafond_arrays">
        <item><font size="12">Rp.100.000.000</font></item>
        <item><font size="12">Rp.200.000.000</font></item>
        <item><font size="12">Rp.300.000.000</font></item>
        <item><font size="12">Rp.400.000.000</font></item>
        <item><font size="12">Rp.500.000.000</font></item>
        <item><font size="12">Rp.600.000.000</font></item>
        <item><font size="12">Rp.700.000.000</font></item>
        <item><font size="12">Rp.800.000.000</font></item>
        <item><font size="12">Rp.900.000.000</font></item>
        <item><font size="12">Rp.1.000.000.000</font></item>
    </string-array>

</resources>
