<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerVertical="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/closePopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_close_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/viewParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/volte"
                android:text="Pilih Parameter"
                android:textColor="@color/textColor"
                android:textSize="13dp"
                app:layout_constraintBottom_toTopOf="@id/parameter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edit_text"
                android:entries="@array/parameter_arrays"
                android:padding="8dp"
                android:prompt="@string/parameter_prompt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewParameter" />

            <TextView
                android:id="@+id/viewpilihkategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/volte"
                android:text="Pilih Kategori"
                android:textColor="@color/textColor"
                android:textSize="13dp"
                app:layout_constraintTop_toBottomOf="@id/parameter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edit_text"
                android:entries="@array/kategori_arrays"
                android:padding="8dp"
                android:prompt="@string/kategori_prompt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpilihkategori" />


            <TextView
                android:id="@+id/viewplafondMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/volte"
                android:text="Plafond Minimum"
                android:textColor="@color/textColor"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@id/plafondMin"
                app:layout_constraintStart_toStartOf="@id/plafondMin"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <TextView
                android:id="@+id/viewplafondMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/volte"
                android:text="Plafond Maksimum"
                android:textColor="@color/textColor"
                android:textSize="13dp"
                app:layout_constraintEnd_toEndOf="@id/plafondMax"
                app:layout_constraintStart_toStartOf="@id/plafondMax"
                app:layout_constraintTop_toBottomOf="@id/category" />

            <EditText
                android:id="@+id/plafondMin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edit_text"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/plafondMax"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewplafondMax"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/plafondMax"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:entries="@array/plafond_arrays"
                android:padding="8dp"
                android:textSize="13dp"
                android:inputType="number"
                android:prompt="@string/plafond_prompt"
                app:layout_constraintBottom_toBottomOf="@id/plafondMin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/plafondMin"
                app:layout_constraintTop_toTopOf="@id/plafondMin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cari"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:text="Cari"
                android:textColor="@color/white"
                android:fontFamily="@font/proximanovasb"
                app:layout_constraintTop_toBottomOf="@id/plafondMin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>